--- a/QpmServer/Web.config
+++ b/QpmServer/Web.config
@@ -4,7 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="MONGOLAB_URI" value="mongodb://appharbor_8g8qwfjc:o5vq0i82p5vh4a05r6pr0cck8v@ds029585.mlab.com:29585/appharbor_8g8qwfjc" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
