--- a/QpmServer/Web.config
+++ b/QpmServer/Web.config
@@ -4,8 +4,8 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings>
-    <add key="MONGOLAB_URI" value="mongodb://appharbor_8g8qwfjc:o5vq0i82p5vh4a05r6pr0cck8v@ds029585.mlab.com:29585/appharbor_8g8qwfjc" />
+  <appSettings file="secret.config">
+    <add key="MONGOLAB_URI" value="" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
