remove secret.config from project

--- a/QpmServer/Web.config
+++ b/QpmServer/Web.config
@@ -4,7 +4,7 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings>
+  <appSettings file="secret.config">
     <add key="MONGOLAB_URI" value="" />
   </appSettings>
   <system.web>
