--- a/QpmServer/ShellRepo.csproj
+++ b/QpmServer/ShellRepo.csproj
@@ -134,10 +134,14 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Common\StreamExtensions.cs" />
+    <Compile Include="Controllers\ShellContentEntityCreator.cs" />
+    <Compile Include="Controllers\ShellEntityFinder.cs" />
+    <Compile Include="Engine\ShellEntityContentRetriever.cs" />
     <Compile Include="Engine\WebErrorLogger.cs" />
     <Compile Include="Engine\LogEvent.cs" />
     <Compile Include="Engine\ShellRepoConfiguration.cs" />
     <Compile Include="Engine\MultipartFormDataMemoryStreamProvider.cs" />
+    <Compile Include="Exceptions\ShellNotFoundException.cs" />
     <Compile Include="Models\ShellContentEntity.cs" />
     <Compile Include="Models\ShellEntity.cs" />
     <Compile Include="Engine\ShellEntityRepository.cs" />
