--- a/QpmServer/ShellRepo.csproj
+++ b/QpmServer/ShellRepo.csproj
@@ -128,6 +128,12 @@
     <Content Include="Global.asax" />
     <Content Include="Default.html" />
     <Content Include="Publish.html" />
+    <Content Include="Scripts\angular-mocks.js" />
+    <Content Include="Scripts\angular.js" />
+    <Content Include="Scripts\angular.min.js" />
+    <Content Include="Scripts\ShellRepoApp.js" />
+    <Content Include="Scripts\ShellsDashboardController.js" />
+    <Content Include="Scripts\ShellsService.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -153,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Content Include="Scripts\angular.min.js.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
