--- a/QpmServer/Web.config
+++ b/QpmServer/Web.config
@@ -6,6 +6,8 @@
 <configuration>
   <appSettings file="secret.config">
     <add key="MONGOLAB_URI" value="" />
+    <add key="SEARCHBOX_URL" value="" />
+    <add key="SEARCHBOX_SSL_URL" value="" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -44,6 +46,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
