--- a/QpmServer/packages.config
+++ b/QpmServer/packages.config
@@ -3,6 +3,7 @@
   <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net45" />
   <package id="DataAnnotationsValidator" version="1.0.0.1" targetFramework="net45" />
+  <package id="Elasticsearch.Net" version="2.4.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
@@ -10,7 +11,8 @@
   <package id="MongoDB.Bson" version="2.2.4" targetFramework="net45" />
   <package id="MongoDB.Driver" version="2.2.4" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.2.4" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="NEST" version="2.4.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="QuickGraph" version="3.6.61119.7" targetFramework="net45" />
   <package id="System.IO.Abstractions" version="2.0.0.124" targetFramework="net45" />
   <package id="Toscana" version="0.0.0.73" targetFramework="net45" />
