--- a/QpmServer/Web.config
+++ b/QpmServer/Web.config
@@ -14,6 +14,11 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
+    <defaultDocument>
+        <files>
+            <add value="Default.html" />
+        </files>
+    </defaultDocument>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
