--- a/QpmServer/ShellRepo.csproj
+++ b/QpmServer/ShellRepo.csproj
@@ -144,12 +144,15 @@
     <Content Include="Scripts\ShellsDashboardController.js" />
     <Content Include="Scripts\ShellsService.js" />
     <Content Include="Styles\ShellRepo.css" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Common\StreamExtensions.cs" />
+    <Compile Include="Engine\ElasticClientFactory.cs" />
     <Compile Include="Engine\MongoDbClientFactory.cs" />
     <Compile Include="Engine\SearchingService.cs" />
     <Compile Include="Engine\ShellUploader.cs" />
