refactor REST API

--- a/QpmServer/ShellRepo.csproj
+++ b/QpmServer/ShellRepo.csproj
@@ -155,15 +155,17 @@
     <Compile Include="Engine\ElasticClientFactory.cs" />
     <Compile Include="Engine\MongoDbClientFactory.cs" />
     <Compile Include="Engine\SearchingService.cs" />
+    <Compile Include="Engine\ShellContentEntityRetriever.cs" />
     <Compile Include="Engine\ShellUploader.cs" />
     <Compile Include="Engine\ShellEntityContentDownloader.cs" />
-    <Compile Include="Engine\ShellEntityFinder.cs" />
+    <Compile Include="Engine\ShellEntityRetriever.cs" />
     <Compile Include="Engine\ShellEntityRepository.cs" />
     <Compile Include="Engine\WebErrorLogger.cs" />
     <Compile Include="Engine\LogEvent.cs" />
     <Compile Include="Engine\ShellRepoConfiguration.cs" />
     <Compile Include="Engine\MultipartFormDataMemoryStreamProvider.cs" />
     <Compile Include="Exceptions\ShellNotFoundException.cs" />
+    <Compile Include="Models\ShellContentDto.cs" />
     <Compile Include="Models\ShellContentEntity.cs" />
     <Compile Include="Models\ShellEntity.cs" />
     <Compile Include="Engine\ShellContentEntityRepository.cs" />
